Core integration to AdminTool